# fluence-network-playground

./: .gitignore  README.md  docker-compose.yaml
server/: Cargo.toml  package.json
server/configs/: Config.toml  deployment.json
server/scripts/: build.sh  deploy.sh
server/src/services/bitcoin-ledger/: Cargo.toml  main.rs
server/src/services/crypto/: Cargo.toml  main.rs
server/src/services/crypto-price/: Cargo.toml  main.rs
server/src/services/curl/: Cargo.toml  main.rs
server/src/services/database/: Cargo.toml  main.rs
server/src/services/ipfs/: Cargo.toml  main.rs
server/src/services/ipfs-adapter/: Cargo.toml  main.rs
server/src/services/price/: Cargo.toml  main.rs
www/: package-lock.json  package.json  svelte.config.js  webpack.config.js
www/aqua/chat/: chat.aqua
www/aqua/crypto/: crypto.aqua
www/aqua/crypto-price/: crypto-price.aqua
www/aqua/database/: database.aqua
www/aqua/ipfs/: ipfs.aqua
www/aqua/price/: price.aqua
www/src/: app.html  application.svelte  index.html  main.js
www/src/components/: hello-world.svelte  network-connector.svelte
www/src/components/bitcoin-ledger/: bitcoin-ledger.svelte
www/src/components/chat/: chat.svelte
www/src/components/crypto/: crypto.svelte
www/src/components/crypto-price/: crypto-price.svelte
www/src/constants/: crypto-price.js  database.js  local-peer-ids.js
www/src/helpers/: DOM.js  dom.js  form.js
www/src/pages/: browser-to-browser.svelte
www/src/routes/: index.svelte
www/src/store/: network.store.js  store.js
www/src/styles/: variables.scss
(+20 files in other folders)
