[package]
name = "server"
version = "1.0.0"
authors = ["Andrei Shapel <mail@shapel.me>"]
description = "Proof of concept of Fluence Network"
edition = "2018"
publish = false

[[bin]]
name = "crypto"
path = "src/services/crypto/main.rs"

[dependencies]
marine-rs-sdk = "0.6.14"
base64 = "0.13.0"
md-5 = "0.10.1"
sha2 = "0.10.2"

[dev-dependencies]
marine-rs-sdk-test = "0.4.1"